--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ body {
 <div class="normal-rocket"></div>
 
 <div class="text">祝最美丽的段佳欣小姐生日快乐!岁岁欢喜常伴！</div>
-<div class="text">岁岁欢喜常伴！</div>
+<div class="text">万事胜意皆如愿！</div>
 
 </body>
 </html>
