--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ body {
 <div class="normal-rocket"></div>
 <div class="normal-rocket"></div>
 
-<div class="text">祝最美丽的段佳欣小姐生日快乐!岁岁欢喜常伴！</div>
+<div class="text">祝最美丽的段佳欣小姐生日快乐!</div>
 <div class="text">万事胜意皆如愿！</div>
 
 </body>
